# exam-proctoring-ai

./: .gitignore  docker-compose.yml
client/: package-lock.json  package.json
client/src/app/: layout.tsx
client/src/app/admin/dashboard/: page.tsx
client/src/components/auth/: device-management.tsx  role-guard.tsx
client/src/lib/: axios.ts
server/: pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0badc7e60883_add_account_unlock_tokens.py  15aed84e2a0f_check.py  3703a3d8e2bd_add_admin_applications_table.py  53ff521b7796_bind_exam_session_to_device.py  5f534be479bc_create_users_table.py  662d00f16c69_add_user_devices.py  679af9f4c88f_add_unlock_requests_to_users.py  97064ef6ea8b_add_security_and_consent_fields_to_users.py  98ad322f874d_add_last_profile_image_update_to_users.py  9ccb88193f5a_add_password_reset_tokens.py  a0aca29c21e8_bind_exam_session_to_device.py  b0fcb8cb9ab2_initial_core_schema.py  c9bc4a52c5db_bling_exam_session.py  d124c751089b_add_refresh_tokens_table.py  e6731834bc08_re_add_password_reset_tokens.py  e950e8e05fd5_add_pending_to_user_devices.py
server/app/: main.py
server/app/auth/: admin_applications.py  dependencies.py  otp.py  routes.py  schemas.py  security.py  service.py
server/app/core/: __init__.py  config.py  device.py  device_otp.py  email.py  embedding.py  exam_guard.py  face_detector.py  face_utils.py  facenet_model.py  logger.py  otp.py  rate_limiter.py  redis.py  storage.py
server/app/db/: __init__.py  enums.py  init_db.py  mixins.py  models.py  session.py
server/app/exam/: exam_guard.py  routes.py
(+9 files in other folders)
